cabal-version:      2.4
name:               hol
version:            0.1.0.0

synopsis:           Rainbows and unicorns! (but in Haskell)

description:        Like lolcat, but written in Haskell.

bug-reports:        https://github.com/victorcebarros/hol

license:            BSD-2-Clause
author:             Victor Cebarros
maintainer:         @victorcebarros

extra-source-files: CHANGELOG.md

executable hol
    main-is:          Main.hs

    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
